engine-net-2/examples/Errors/ProcedureMethodParametersOutNumberMismatch.grs
new graph "Rules.grg"

exec { n:N=null; (d:double,j:int)=n.p(42) }

quit
